# toride

./: CLAUDE.md  Cargo.toml  cargo-dist.toml  install.sh
.github/workflows/: ci.yml
crates/toride/: Cargo.toml
crates/toride-audit/src/: auditd.rs  auditd_rules.rs  cli.rs  diff.rs  integrity.rs  integrity_config.rs  integrity_parse.rs  lib.rs  logs_journald.rs  logs_rotation.rs  logs_rsyslog.rs  report.rs
crates/toride-backup/src/: borg.rs  restore.rs  systemd.rs
crates/toride-fail2ban/: Cargo.toml
crates/toride-fail2ban/proptest-regressions/: command.test.txt
crates/toride-fail2ban/src/: action.rs  action.test.rs  ban.rs  ban.test.rs  cli.rs  command.test.rs  config.rs  config.test.rs  detector.rs  detector.test.rs  doctor.rs  doctor.test.rs  firewall.rs  firewall.test.rs  jail.rs  jail.test.rs  lib.rs  manager.rs  manager.test.rs  paths.rs  store.rs  store.test.rs  support.rs  support.test.rs  types.rs  types.test.rs
crates/toride-fs/src/: atomic.rs
crates/toride-harden/src/: cli.rs  client.rs  lib.rs  profile.rs  validate.rs
crates/toride-installer/: Cargo.toml
crates/toride-installer/src/: error.rs  extract.rs  installer.rs  lib.rs  progress.rs  tool.rs
crates/toride-mise/: README.md
crates/toride-mise/src/: builder.rs  capabilities.rs  client.rs  error.rs  lib.rs  security.rs  streaming.rs
crates/toride-monitor/: Cargo.toml
crates/toride-monitor/src/: client.rs  error.rs  lib.rs  output.rs  ports.rs  service.rs
crates/toride-proxy/src/: backup.rs  client.rs  config.rs  doctor.rs  nginx.rs  render.rs  report.rs
crates/toride-runner/src/: display.rs  duct_runner.rs  fake.rs  redact.rs  streaming_tests.rs  tokio_runner.rs
crates/toride-ssh/: Cargo.toml
crates/toride-ssh/src/: lib.rs  paths.rs  types.rs
crates/toride-status/src/: collector.rs  system.rs
crates/toride-tailscale/src/: doctor.rs  render.rs  validate.rs
crates/ufw-kit/: Cargo.toml
docs/: design.md  duct-runner-full-fledged-plan.md  fail2ban.md  lima-sandbox.md  mise.md  ratatui-focus-keyboard-vim-layout-best-practices.md  ratatui-state-lifecycle-async-best-practices.md  raw-plan.md  runner-extend.md  ssh-plan.md  vps-security-crate-split.md
src/: app.rs  lib.rs  main.rs
src/executor/: command.rs  plan.rs
src/modules/: mise.rs
src/plugins/: loader.rs
src/status/: capabilities.rs  collector.rs  daemon.rs  doctor.rs  mod.rs  presets.rs  privacy.rs  provider.rs  ssh.rs  system.rs
src/tui/: effects.rs  model.rs  update.rs
src/ui/: welcome.rs
tests/: unit_tests.rs
(+222 files in other folders)
