[workspace]

[package]
name = "toride"
version = "0.1.0"
edition = "2024"

[lib]
name = "toride"
path = "src/lib.rs"

[[bin]]
name = "toride"
path = "src/main.rs"

[features]
default = ["sysinfo-provider"]
sysinfo-provider = []
linux-procfs = ["procfs"]
linux-sensors = ["lm-sensors"]
linux-udev = ["udev"]
linux-rtnetlink = ["rtnetlink"]
linux-cgroups = ["cgroups-rs"]
os-info = ["os_info"]
cpu-cpuid = ["raw-cpuid"]
hardware-dmi = ["dmidecode"]
hardware-pci = ["pci-info", "pci-ids"]
hardware-topology = ["hwlocality"]
gpu-nvidia = ["nvml-wrapper"]
battery = ["starship-battery"]
commands = ["dep:duct"]

[dependencies]
ratatui = "0.30"
unicode-width = "0.2"
crossterm = { version = "0.29", features = ["event-stream"] }
tachyonfx = "0.25.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
color-eyre = "0.6"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-appender = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["charset", "http2", "rustls"] }
sha2 = "0.11"
hex = "0.4"
which = "8"
nix = { version = "0.31", features = ["user", "signal", "fs"] }
dirs = "6"
sysinfo = "0.35"
sysconf = "0.3"
async-trait = "0.1"
ratatui-interact = "0.5.3"
rattles = "0.3.1"
ratatui-wgpu = "0.5.0"

# Status subsystem optional dependencies
procfs = { version = "0.18", optional = true }
os_info = { version = "3", optional = true }
nvml-wrapper = { version = "0.10", optional = true }
starship-battery = { version = "0.8", optional = true }
dmidecode = { version = "1.0", optional = true }
raw-cpuid = { version = "11", optional = true }
hwlocality = { version = "1.0.0-alpha.12", optional = true }
pci-info = { version = "0.2", optional = true }
pci-ids = { version = "0.2", optional = true }
cgroups-rs = { version = "0.5", optional = true }
duct = { version = "0.13", optional = true }
lm-sensors = { version = "0.1", optional = true }
udev = { version = "0.8", optional = true }
rtnetlink = { version = "0.14", optional = true }

[dev-dependencies]
insta = "1"
tempfile = "3"
testty = "0.9"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
